--- a/InjectionDemo/Views/Question/Index.cshtml
+++ b/InjectionDemo/Views/Question/Index.cshtml
@@ -28,5 +28,5 @@
     <h1>Bekijk je gestelde vraag</h1>
 
     <h3>Uw Vraag: @Model.Title</h3>
-    <p>@Html.Raw(Model.Description)</p>
+    <p>@Model.Description</p>
 }
